--- a/Limit/css/sliders-specimen.css
+++ b/Limit/css/sliders-specimen.css
@@ -40,8 +40,7 @@ input[type=range]::-moz-range-track {
   padding:0;
   border: none;
     box-shadow: none;
-
-  border:2px solid white;
+  border:6px solid white;
 
   /* Hides the slider so custom styles can be added */
 }
@@ -64,7 +63,7 @@ input[type=range]::-webkit-slider-thumb {
 input[type=range]::-moz-range-thumb {
   -webkit-appearance: none;
   box-shadow: none;
-  border: none;
+  border: 0px;
   height: 10px;
   width: 10px;
   border-radius: 0px;
