Load bold font before it used in CSS.

--- a/css/main.css
+++ b/css/main.css
@@ -159,6 +159,10 @@ img{background-color:;}
     .nav{
           
     }
+    .b{
+       font-family: "LimitScreenCurve-130", sans-serif;
+       color:white;
+    }
 
     /*///////////////////////*/
     /*/////// Content ///////*/
